[package]
name = "haze-wayland-ssd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Wayland server-side decoration preload backend for Haze"
repository = "https://github.com/ektorthebigbro/haze-wayland-ssd"
build = "build.rs"

[lib]
name = "haze_wayland_ssd"
crate-type = ["cdylib"]

[dependencies]
glib = "0.21"
libc = "0.2"
once_cell = "1.21"
wayland-server = { version = "0.31", default-features = false, features = ["system"] }

[build-dependencies]
pkg-config = "0.3"
wayland-scanner = "0.31"

[package.metadata.haze]
supported_wayland = ["1.22", "1.23", "1.24"]
supported_gnome_shell = ["47", "48", "49", "50"]
supported_mutter_api = ["15", "16", "17", "18"]
